--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -969,6 +969,7 @@ DOGE:
   - Emily Bryant
   - James Burnham
   - Edward Coristine
+  - Scott Coulter
   - Steve Davis
   - Marko Elez
   - Luke Farritor
@@ -1131,6 +1132,17 @@ DOGE:
     - Baris Akis
     - James Burnham
     agency: DOGE
+  - date: 2025-01-30
+    type: interagency
+    event: Leland Dudek reaches out to Tiffany Flick, the Associate Director of Budget, Facilities and Security to inform her two DOGE staff would be onboarding. He was a mid-level employee at the time.
+    interagency_doge_reps:
+      SSA:
+      - Leland Dudek
+      DOGE:
+      - Mike Russo
+      - Scott Coulter
+    source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
+    agency: SSA
   - date: 2025-02-02
     type: report
     event: Wired Magazine identifies Cole Killian as a volunteer at DOGE
@@ -5003,12 +5015,14 @@ SSA:
     - SSA
     - VA
   - date: 2025-01-30
-    type: report
+    type: interagency
     event: Leland Dudek reaches out to Tiffany Flick, the Associate Director of Budget, Facilities and Security to inform her two DOGE staff would be onboarding. He was a mid-level employee at the time.
-    named:
-    - Leland Dudek
-    - Mike Russo
-    - Scott Coulter
+    interagency_doge_reps:
+      SSA:
+      - Leland Dudek
+      DOGE:
+      - Mike Russo
+      - Scott Coulter
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     agency: SSA
   - date: 2025-01-31
