--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -897,6 +897,13 @@ DOI:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-03-29
     event: Two DOGE staffers are granted admin access to the FPPS payroll system at the Department of the Interior
     type: access_granted
@@ -1404,6 +1411,13 @@ DOGE:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-04-16
     type: report
     event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing an application process for a $5 Million "Gold Card" visa
@@ -2520,6 +2534,13 @@ Treasury:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-04-07
     type: legal
     event: In a 2-1 vote, the 4th U.S. Circuit Court of Appeals lifted a stay against DOGE data access at the Treasury, OPM and Department of Education imposed in the case American Federation of Teachers v. Bessent (D. Maryland 2025)
@@ -3489,6 +3510,13 @@ HHS:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-03-29
     type: access_changed
     access_type: admin
@@ -4783,6 +4811,13 @@ OPM:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-04-03
     type: report
     event: Scott Kupor, the nominee to lead OPM, assured senators that he believes strong in data privacy and respecting the humanity and dignity of the workforce
@@ -5607,6 +5642,13 @@ SSA:
       - Tom Krause
       DOI:
       - Tyler Hassen
+    agency:
+    - DOGE
+    - OPM
+    - SSA
+    - HHS
+    - Treasury
+    - DOI
   - date: 2025-03-30
     type: report
     event: At a town hall event in Wisconsin, Elon Musk and Antonio Gracias claim to have found fraud in the number of immigrants being granted social security numbers
@@ -5650,6 +5692,10 @@ SSA:
     interagency_doge_reps:
       SSA:
       - Leland Dudek
+    agency:
+    - SSA
+    - DHS
+    - ICE
   - date: 2025-04-08~
     type: access_granted
     event: Unidentified "Employee 11" is accidentally granted access to SSA systems that DOGE was banned from by the court order
