--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -783,6 +783,11 @@ people:
       type: report
       event: Three DOGE staffers are reported to work with staff from DHS, the State Department and USCIS on implementing
         an application process for a $5 Million "Gold Card" visa
+    - date: 2025-04-18
+      agency: DOL
+      type: access_granted
+      event: Wired reports that three DOGE staffers at DOL were granted access to the DOL's Reentry Employment Opportunities
+        (REO) program, which provides aid to people re-entering society from incarceration
 
   Ryan Wunderly:
     agencies:
@@ -1525,6 +1530,16 @@ people:
       type: report
       event: Aram Moghaddassi adds 6300 names of suspected immigrants to the "death master file" as a way of forcing them
         to "self-deport" by making it impossible to use financial products. It included 7 minors.
+    - date: 2025-04-18
+      agency: DOL
+      type: access_granted
+      event: Wired reports that Aram Moghaddassi has been granted "OIG-level" admin access to the DOL's Foreign Labor Application
+        Gateway (FLAG) system, which would include visa applications of foreign workers
+    - date: 2025-04-18
+      agency: DOL
+      type: access_granted
+      event: Wired reports that three DOGE staffers at DOL were granted access to the DOL's Reentry Employment Opportunities
+        (REO) program, which provides aid to people re-entering society from incarceration
 
   Cole Killian:
     agencies:
@@ -3264,6 +3279,16 @@ people:
       type: report
       event: Business Insider reports Marko Elez, Aram Moghaddassi, and Miles B. Collins are new DOGE arrivals at Department
         of Labor
+    - date: 2025-04-18
+      agency: DOL
+      type: access_granted
+      event: Wired reports that Miles Collins has access to the National Farmworker Jobs Program (NFJP) system, which provides
+        grants to organizations that work with migrant and seasonal labor
+    - date: 2025-04-18
+      agency: DOL
+      type: access_granted
+      event: Wired reports that three DOGE staffers at DOL were granted access to the DOL's Reentry Employment Opportunities
+        (REO) program, which provides aid to people re-entering society from incarceration
 
   Kenneth Jackson:
     agencies:
@@ -3351,3 +3376,13 @@ people:
       type: report
       event: DOGE staff reportedly visit the Peace Corps, planning to work over the weeked to review records and access IT
         systems
+
+  Roland Shen:
+    agencies:
+    - Department of the Treasury
+    events:
+    - date: 2025-04-18
+      agency: Treasury
+      type: report
+      event: A new DOGE staffer (Roland Shen) who works for the payments startup Ramp has reportedly been granted access to
+        BFS systems
