--- a/it_modernization/raw_data/aliases.yaml
+++ b/it_modernization/raw_data/aliases.yaml
@@ -166,3 +166,10 @@
   - The declaration names Jordan Wick, Chris Young, Nikhil Rajpal and Luke Farritor as well as 2 other CFPB staff not named
   - Based on reporting, Gavin Kliger and Jeremy Lewin were the other DOGE staff at the agency at the time of this action
   - Gavin Kliger has already been unmasked as CFPB-1
+
+- id: FBI-1
+  agency: FBI
+  name: Justin Monroe
+  evidence:
+  - This person isn't named in the original NBC News report
+  - But they're identified specifically in a ProPublica roundup as being this person
